<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar4"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="56dp">

        <TextView
            android:id="@+id/txtCandi1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunil_chavda_has_0_votes"
            android:textSize="25sp"
            android:layout_marginTop="90dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtCandi2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aakash_shah_has_0_votes"
            android:textSize="25sp"
            android:layout_marginTop="90dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtCandi3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anjali_kumari_has_0_votes"
            android:textSize="25sp"
            android:layout_marginTop="90dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtCandi4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rahul_verma_has_0_votes"
            android:textSize="25sp"
            android:layout_marginTop="90dp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:layout_marginLeft="120dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:backgroundTint="@color/primary"/>

</RelativeLayout>